<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/h1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_semi_transparent_white"
            android:padding="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/h2"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_semi_transparent_white"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="Burger Image"
            android:src="@drawable/burger"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
         />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_marginBottom="16dp">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ingredient1"
                android:background="@drawable/rounded_semi_transparent_white"
                android:padding="8dp" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ingredient2"
                android:background="@drawable/rounded_semi_transparent_white"
                android:padding="8dp" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ingredient3"
                android:background="@drawable/rounded_semi_transparent_white"
                android:padding="8dp" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ingredient4"
                android:background="@drawable/rounded_semi_transparent_white"
                android:padding="8dp" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ingredient5"
                android:background="@drawable/rounded_semi_transparent_white"
                android:padding="8dp" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/ingredient6"
                android:background="@drawable/rounded_semi_transparent_white"
                android:padding="8dp" />

        </GridLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/h4"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_semi_transparent_white"
            android:padding="8dp" />



            <LinearLayout
                android:id="@+id/selectedIngredientsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/rounded_semi_transparent_white"
                android:layout_marginBottom="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_semi_transparent_white"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h5"
                android:textSize="20sp"
                android:layout_marginRight="4dp"
               />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="£6.00"
                android:textSize="24sp"
                android:textStyle="bold"
              />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7sp"
            >

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button1"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button2"
                android:layout_marginStart="8dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>